crates/monochange/tests/snapshots/cli_step_input_overrides__cli_step_override_json_scenarios_match_snapshot@affected_packages.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: redacted
---
{
  "affected_package_ids": [],
  "changed_paths": [
    "crates/core/CHANGELOG.md"
  ],
  "changeset_paths": [],
  "comment": null,
  "covered_package_ids": [],
  "enforce": true,
  "errors": [],
  "ignored_paths": [
    "crates/core/CHANGELOG.md"
  ],
  "labels": [
    "no-changeset-required"
  ],
  "matched_paths": [],
  "matched_skip_labels": [
    "no-changeset-required"
  ],
  "required": false,
  "status": "skipped",
  "summary": "changeset verification skipped because the change has an allowed label: no-changeset-required",
  "uncovered_package_ids": []
}
