crates/monochange/tests/snapshots/cli_step_input_overrides__cli_step_override_json_scenarios_match_snapshot@comment_released_issues.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: redacted
---
{
  "changed_files": [
    "Cargo.toml",
    "crates/core/CHANGELOG.md",
    "crates/core/Cargo.toml"
  ],
  "changelogs": [
    {
      "format": "monochange",
      "notes": {
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "- **add github fixture coverage.**"
            ],
            "title": "Features"
          }
        ],
        "summary": [],
        "title": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])"
      },
      "output": "default",
      "owner_id": "core",
      "owner_kind": "package",
      "path": "crates/core/CHANGELOG.md",
      "rendered": "[multiline text]",
      "stream": "default"
    }
  ],
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actor_profiles": true,
          "commit_web_urls": true,
          "issue_comments": true,
          "related_issues": true,
          "review_request_lookup": true
        },
        "host": "github.com",
        "introduced": null,
        "last_updated": null,
        "provider": "github",
        "related_issues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add github fixture coverage",
      "targets": [
        {
          "bump": "minor",
          "change_type": "minor",
          "evidence_refs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "command": "release-comments",
  "deleted_changesets": [],
  "dry_run": true,
  "group_version": null,
  "package_publications": [
    {
      "ecosystem": "cargo",
      "mode": "builtin",
      "package": "core",
      "registry": "crates_io",
      "trusted_publishing": {
        "enabled": true,
        "environment": null,
        "mode": "required",
        "repository": null,
        "workflow": null
      },
      "version": "1.1.0"
    }
  ],
  "plan": {
    "compatibility_evidence": [],
    "decisions": [
      {
        "bump": "minor",
        "package": "cargo:crates/core/Cargo.toml",
        "planned_version": "1.1.0",
        "reasons": [
          "add github fixture coverage"
        ],
        "trigger": "direct-change",
        "upstream_sources": [
          "cargo:crates/core/Cargo.toml"
        ]
      }
    ],
    "groups": [],
    "unresolved_items": [],
    "warnings": [],
    "workspace_root": "."
  },
  "release_targets": [
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": true,
      "rendered_changelog_title": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])",
      "rendered_title": "core v1.1.0 ([DATE])",
      "tag": true,
      "tag_name": "core/v1.1.0",
      "version": "1.1.0",
      "version_format": "namespaced"
    }
  ],
  "released_packages": [
    "workflow-core"
  ],
  "version": "1.1.0"
}
