crates/monochange/tests/snapshots/cli_step_input_overrides__cli_step_override_json_scenarios_match_snapshot@discover_workspace.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: redacted
---
{
  "dependencies": [
    {
      "direct": true,
      "from": "cargo:crates/app/Cargo.toml",
      "kind": "runtime",
      "to": "cargo:crates/core/Cargo.toml"
    }
  ],
  "packages": [
    {
      "ecosystem": "cargo",
      "id": "cargo:crates/app/Cargo.toml",
      "manifest_path": "crates/app/Cargo.toml",
      "name": "workflow-app",
      "publish_state": "public",
      "version": "1.0.0",
      "version_group": "sdk",
      "workspace_root": "."
    },
    {
      "ecosystem": "cargo",
      "id": "cargo:crates/core/Cargo.toml",
      "manifest_path": "crates/core/Cargo.toml",
      "name": "workflow-core",
      "publish_state": "public",
      "version": "1.0.0",
      "version_group": "sdk",
      "workspace_root": "."
    }
  ],
  "version_groups": [
    {
      "id": "sdk",
      "members": [
        "cargo:crates/core/Cargo.toml",
        "cargo:crates/app/Cargo.toml"
      ],
      "mismatch_detected": false
    }
  ],
  "warnings": [],
  "workspace_root": "."
}
