crates/monochange/tests/snapshots/cli_step_input_overrides__stdout@create_change_file_step_dry_run_previews_hardcoded_inputs_without_writing.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
would write change file .changeset/hardcoded.md

---
core: minor
---

# hardcoded change
