crates/monochange/tests/snapshots/cli_step_input_overrides__stdout@create_change_file_step_writes_hardcoded_inputs_without_dry_run.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
✔ Created changeset .changeset/hardcoded.md
