crates/monochange/tests/snapshots/cli_step_input_overrides__validate_step_runs_without_input_overrides@validate_step_runs_without_input_overrides.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
✔ Workspace validation passed
